# Microsoft-Graph-MCP

./: README.md
.github/workflows/: continuous-integration.yml  release.yml
graph-mcp-python/: Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
graph-mcp-python/graph_mcp/: __init__.py  config.py  main.py
graph-mcp-python/graph_mcp/services/: graph_service.py
